container-essentials/docker/k8s/ingress/ingress-defaultbackend-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ingress-controller-defaultbackend
  labels:
    k8s-app: ingress-controller
    component: defaultbackend
spec:
  replicas: 1
  # selector:
  #   matchLabels:
  #     app: nginx-ingress-lb
  #     component: default
  template:
    metadata:
      name: ingress-controller-defaultbackend
      labels:
        k8s-app: ingress-controller
        component: defaultbackend
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name: ingress-controller-defaultbackend
        # Any image is permissable as long as:
        # 1. It serves a 404 page at /
        # 2. It serves 200 on a /healthz endpoint
        image: gcr.io/google_containers/defaultbackend:1.0
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          timeoutSeconds: 5
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 10m
            memory: 20Mi
          requests:
            cpu: 10m
            memory: 20Mi
