container-essentials/docker/k8s/ingress/ingress-defaultbackend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-controller-defb
    #^ must be no more than 24 characters
  labels:
    k8s-app: ingress-controller
    component: defaultbackend
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    k8s-app: ingress-controller
    component: defaultbackend
