container-essentials/docker/k8s/ingress/service_depl.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-end
spec:
  type: NodePort
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 80
  selector:
    app: nginx
